# lispy

./: Makefile  README.md  lis.py  lispy  lispy.py  pyproject.toml
test/: test_lis.py  test_lispy.py
